--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -14,7 +14,9 @@ list(APPEND CMAKE_CONFIGURATION_TYPES cortexM0l cortexM0b
                                       cortexM3l cortexM3b
                                       cortexM4l cortexM4b cortexM4lf cortexM4bf
                                       cortexM7l cortexM7b cortexM7ls cortexM7bs cortexM7lf cortexM7bf
-                                      ARMv8MBLl)
+                                      ARMv8MBLl
+                                      ARMv8MMLl           ARMv8MMLldfsp         ARMv8MMLldfdp
+                                      ARMv81MMLld                               ARMv81MMLldfdp)
 
 foreach(cfg ${CMAKE_CONFIGURATION_TYPES})
   find_library("lib_${cfg}"
@@ -50,51 +52,67 @@ foreach(TGT ${TARGETS})
     "${CMAKE_CURRENT_SOURCE_DIR}")
 
   set_target_properties(${TGT} PROPERTIES
-    CPU_cortexM0l  Cortex-M0
-    FPU_cortexM0l  None
-    END_cortexM0l  little
-    CPU_cortexM0b  Cortex-M0
-    FPU_cortexM0b  None
-    END_cortexM0b  big
-    CPU_cortexM3l  Cortex-M3
-    FPU_cortexM3l  None
-    END_cortexM3l  little
-    CPU_cortexM3b  Cortex-M3
-    FPU_cortexM3b  None
-    END_cortexM3b  big
-    CPU_cortexM4l  Cortex-M4
-    FPU_cortexM4l  None
-    END_cortexM4l  little
-    CPU_cortexM4lf Cortex-M4
-    FPU_cortexM4lf vfpv4_sp
-    END_cortexM4lf little
-    CPU_cortexM4b  Cortex-M4
-    FPU_cortexM4b  None
-    END_cortexM4b  big
-    CPU_cortexM4bf Cortex-M4
-    FPU_cortexM4bf vfpv4_sp
-    END_cortexM4bf big
-    CPU_cortexM7l  Cortex-M7
-    FPU_cortexM7l  None
-    END_cortexM7l  little
-    CPU_cortexM7b  Cortex-M7
-    FPU_cortexM7b  None
-    END_cortexM7b  big
-    CPU_cortexM7ls Cortex-M7
-    FPU_cortexM7ls vfpv5_sp
-    END_cortexM7ls little
-    CPU_cortexM7bs Cortex-M7
-    FPU_cortexM7bs vfpv5_sp
-    END_cortexM7bs big
-    CPU_cortexM7lf Cortex-M7
-    FPU_cortexM7lf vfpv5_d16
-    END_cortexM7lf little
-    CPU_cortexM7bf Cortex-M7
-    FPU_cortexM7bf vfpv5_d16
-    END_cortexM7bf big
-    CPU_ARMv8MBLl  Cortex-M23.no_se
-    FPU_ARMv8MBLl  None
-    END_ARMv8MBLl  little)
+    CPU_cortexM0l        Cortex-M0
+    FPU_cortexM0l        None
+    END_cortexM0l        little
+    CPU_cortexM0b        Cortex-M0
+    FPU_cortexM0b        None
+    END_cortexM0b        big
+    CPU_cortexM3l        Cortex-M3
+    FPU_cortexM3l        None
+    END_cortexM3l        little
+    CPU_cortexM3b        Cortex-M3
+    FPU_cortexM3b        None
+    END_cortexM3b        big
+    CPU_cortexM4l        Cortex-M4
+    FPU_cortexM4l        None
+    END_cortexM4l        little
+    CPU_cortexM4lf       Cortex-M4
+    FPU_cortexM4lf       vfpv4_sp
+    END_cortexM4lf       little
+    CPU_cortexM4b        Cortex-M4
+    FPU_cortexM4b        None
+    END_cortexM4b        big
+    CPU_cortexM4bf       Cortex-M4
+    FPU_cortexM4bf       vfpv4_sp
+    END_cortexM4bf       big
+    CPU_cortexM7l        Cortex-M7
+    FPU_cortexM7l        None
+    END_cortexM7l        little
+    CPU_cortexM7b        Cortex-M7
+    FPU_cortexM7b        None
+    END_cortexM7b        big
+    CPU_cortexM7ls       Cortex-M7
+    FPU_cortexM7ls       vfpv5_sp
+    END_cortexM7ls       little
+    CPU_cortexM7bs       Cortex-M7
+    FPU_cortexM7bs       vfpv5_sp
+    END_cortexM7bs       big
+    CPU_cortexM7lf       Cortex-M7
+    FPU_cortexM7lf       vfpv5_d16
+    END_cortexM7lf       little
+    CPU_cortexM7bf       Cortex-M7
+    FPU_cortexM7bf       vfpv5_d16
+    END_cortexM7bf       big
+    CPU_ARMv8MBLl        Cortex-M23.no_se
+    FPU_ARMv8MBLl        None
+    END_ARMv8MBLl        little
+    CPU_ARMv8MMLl        Cortex-M33.no_se
+    FPU_ARMv8MMLl        None
+    END_ARMv8MMLl        little
+    CPU_ARMv8MMLldfsp    Cortex-M33.no_se
+    FPU_ARMv8MMLldfsp    vfpv5_sp
+    END_ARMv8MMLldfsp    little
+    CPU_ARMv8MMLldfdp    Cortex-M33.no_se
+    FPU_ARMv8MMLldfdp    vfpv5_d16
+    END_ARMv8MMLldfdp    little
+    CPU_ARMv81MMLld      Cortex-M55.no_se.no_mve
+    FPU_ARMv81MMLld      None
+    END_ARMv81MMLld      little
+    CPU_ARMv81MMLldfdp   Cortex-M55.no_se.no_mve
+    FPU_ARMv81MMLldfdp   vfpv5_d16
+    END_ARMv81MMLldfdp   little
+  )
 
   target_compile_definitions(${TGT} PRIVATE
     SEMIHOSTING)
@@ -110,19 +128,29 @@ foreach(TGT ${TARGETS})
     --map ./$<CONFIG>/)
 
   target_link_libraries(${TGT} PRIVATE
-    $<$<CONFIG:cortexM0l>:  ${lib_cortexM0l}>
-    $<$<CONFIG:cortexM0b>:  ${lib_cortexM0b}>
-    $<$<CONFIG:cortexM3l>:  ${lib_cortexM3l}>
-    $<$<CONFIG:cortexM3b>:  ${lib_cortexM3b}>
-    $<$<CONFIG:cortexM4l>:  ${lib_cortexM4l}>
-    $<$<CONFIG:cortexM4b>:  ${lib_cortexM4b}>
-    $<$<CONFIG:cortexM4lf>: ${lib_cortexM4lf}>
-    $<$<CONFIG:cortexM4bf>: ${lib_cortexM4bf}>
-    $<$<CONFIG:cortexM7l>:  ${lib_cortexM7l}>
-    $<$<CONFIG:cortexM7b>:  ${lib_cortexM7b}>
-    $<$<CONFIG:cortexM7ls>: ${lib_cortexM7ls}>
-    $<$<CONFIG:cortexM7bs>: ${lib_cortexM7bs}>
-    $<$<CONFIG:cortexM7lf>: ${lib_cortexM7lf}>
-    $<$<CONFIG:cortexM7bf>: ${lib_cortexM7bf}>
-    $<$<CONFIG:ARMv8MBLl>:  ${lib_ARMv8MBLl}>)
+    $<$<CONFIG:cortexM0l>:        ${lib_cortexM0l}>
+    $<$<CONFIG:cortexM0b>:        ${lib_cortexM0b}>
+    $<$<CONFIG:cortexM3l>:        ${lib_cortexM3l}>
+    $<$<CONFIG:cortexM3b>:        ${lib_cortexM3b}>
+    $<$<CONFIG:cortexM4l>:        ${lib_cortexM4l}>
+    $<$<CONFIG:cortexM4b>:        ${lib_cortexM4b}>
+    $<$<CONFIG:cortexM4lf>:       ${lib_cortexM4lf}>
+    $<$<CONFIG:cortexM4bf>:       ${lib_cortexM4bf}>
+    $<$<CONFIG:cortexM7l>:        ${lib_cortexM7l}>
+    $<$<CONFIG:cortexM7b>:        ${lib_cortexM7b}>
+    $<$<CONFIG:cortexM7ls>:       ${lib_cortexM7ls}>
+    $<$<CONFIG:cortexM7bs>:       ${lib_cortexM7bs}>
+    $<$<CONFIG:cortexM7lf>:       ${lib_cortexM7lf}>
+    $<$<CONFIG:cortexM7bf>:       ${lib_cortexM7bf}>
+    $<$<CONFIG:ARMv8MBLl>:        ${lib_ARMv8MBLl}>
+    $<$<CONFIG:ARMv8MMLl>:        ${lib_ARMv8MMLl}>
+    $<$<CONFIG:ARMv8MMLlfsp>:     ${lib_ARMv8MMLlfsp}>
+    $<$<CONFIG:ARMv8MMLlfdp>:     ${lib_ARMv8MMLlfdp}>
+    $<$<CONFIG:ARMv8MMLldfsp>:    ${lib_ARMv8MMLldfsp}>
+    $<$<CONFIG:ARMv8MMLldfdp>:    ${lib_ARMv8MMLldfdp}>
+    $<$<CONFIG:ARMv81MMLld>:      ${lib_ARMv81MMLld}>
+    $<$<CONFIG:ARMv81MMLldfdp>:   ${lib_ARMv81MMLldfdp}>
+    $<$<CONFIG:ARMv81MMLldfdph>:  ${lib_ARMv81MMLldfdph}>
+  )
+
 endforeach()
