--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,7 @@ jobs:
       run: |
         iarbuild Library/arm_cortexM_math.ewp -build ${{ matrix.arch }} -log all -parallel `nproc`
     - name: Upload artifacts
+      if: matrix.arch == cortexM4lf
       uses: actions/upload-artifact@v4
       with:
         name: iar_${{ matrix.arch }}_math.a
@@ -94,6 +95,11 @@ jobs:
       with:
         name: iar_${{ matrix.arch }}_math.a
         path: ${{ github.workspace }}
+    - name: Cleanup
+      uses: geekyeggo/delete-artifact@f275313e70c08f6120db482d7a6b98377786765b # v5.1.0
+      with:
+        name: iar_${{ matrix.arch }}_math.a
+
     - name: Build example
       run: |
         iarbuild Examples/${{ matrix.example }}.ewp -build "*" -log all -parallel `nproc`
@@ -102,39 +108,3 @@ jobs:
       with:
         elf: ${GITHUB_WORKSPACE}/Examples/${{ matrix.arch }}/Exe/${{ matrix.example }}.out
         simulator: true
-
-  cleanup:
-    needs: run
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    strategy:
-      matrix:
-        arch:
-        - cortexM0l
-        - cortexM0b
-        - cortexM3l
-        - cortexM3b
-        - cortexM4l
-        - cortexM4b
-        - cortexM4lf
-        - cortexM4bf
-        - cortexM7l
-        - cortexM7ls
-        - cortexM7lf
-        - cortexM7b
-        - cortexM7bs
-        - cortexM7bf
-        - ARMv8MBLl
-        - ARMv8MMLl
-        - ARMv8MMLld
-        - ARMv8MMLlfsp
-        - ARMv8MMLlfdp
-        - ARMv8MMLldfsp
-        - ARMv8MMLldfdp
-        - ARMv81MMLld
-        - ARMv81MMLldfdp
-        - ARMv81MMLldfdph
-    steps:
-    - uses: geekyeggo/delete-artifact@f275313e70c08f6120db482d7a6b98377786765b # v5.1.0
-      with:
-        name: iar_${{ matrix.arch }}_math.a
