Split cleanup to dedicated stage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,10 +95,6 @@ jobs:
       with:
         name: iar_${{ matrix.arch }}_math.a
         path: ${{ github.workspace }}
-    - name: Cleanup
-      uses: geekyeggo/delete-artifact@f275313e70c08f6120db482d7a6b98377786765b # v5.1.0
-      with:
-        name: iar_${{ matrix.arch }}_math.a
     - name: Build example
       run: |
         iarbuild Examples/${{ matrix.example }}.ewp -build "*" -log all -parallel `nproc`
@@ -107,3 +103,16 @@ jobs:
       with:
         elf: ${GITHUB_WORKSPACE}/Examples/${{ matrix.arch }}/Exe/${{ matrix.example }}.out
         simulator: true
+
+  cleanup:
+    needs: run
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        arch:
+        - cortexM4lf
+    steps:
+    - uses: geekyeggo/delete-artifact@f275313e70c08f6120db482d7a6b98377786765b # v5.1.0
+      with:
+        name: iar_${{ matrix.arch }}_math.a
